<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.cortex</groupId>
		<artifactId>connector</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>
	<artifactId>message-broker</artifactId>
	<groupId>com.cortex</groupId>
	<version>0.0.1-SNAPSHOT</version>
	<dependencies>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
		</dependency>
		<dependency>
			<!-- https://jira.spring.io/browse/SPR-16776 -->
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>5.1.0.BUILD-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot</artifactId>
			<version>2.0.2.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-autoconfigure</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
			<version>2.1.6.RELEASE</version>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>jdk10</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<java.version>10</java.version>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.7.0</version>
						<configuration>
							<release>${java.version}</release>
						</configuration>
						<dependencies>
							<!-- JDK 10 fix -->
							<dependency>
								<groupId>org.ow2.asm</groupId>
								<artifactId>asm</artifactId>
								<version>6.1.1</version>
							</dependency>
						</dependencies>
					</plugin>
					<plugin>
						<artifactId>maven-jar-plugin</artifactId>
						<version>3.0.2</version>
						<configuration>
							<outputDirectory>${project.build.directory}/modules</outputDirectory>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<jvmArguments>--add-modules java.xml.bind</jvmArguments>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>build-info</goal>
								</goals>
								<configuration>
									<additionalProperties>
										<encoding.source>${project.build.sourceEncoding}
										</encoding.source>
										<encoding.reporting>${project.reporting.outputEncoding}
										</encoding.reporting>
										<java.source>${java.version}</java.source>
										<java.target>${java.version}</java.target>
									</additionalProperties>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>copy-dependencies</id>
								<phase>package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}/modules
									</outputDirectory>
									<includeScope>runtime</includeScope>
									<excludeArtifactIds>
										jboss-transaction-api_1.2_spec
									</excludeArtifactIds>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-install-plugin</artifactId>
						<version>2.3.1</version>
						<executions>
							<execution>
								<goals>
									<goal>install-file</goal>
								</goals>
								<phase>install</phase>
								<configuration>
									<file>${project.build.directory}/modules/${project.build.finalName}.${project.packaging}</file>
									<generatePom>false</generatePom>
									<pomFile>pom.xml</pomFile>
									<version>${project.build.version}</version>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>